manifests/userservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-set-headers: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 80
